--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "style-resources-loader": "^1.4.1",
     "vue": "^2.6.11",
     "vuex": "^3.4.0"
   },
